Switch to karate for API testing - Use karate for ApiTests module - Add new create session use case (core) - Move Mocks and Stubs classes from core to ApiTests modules